z-index fix

--- a/src/components/Modals/Modal/Modal.module.scss
+++ b/src/components/Modals/Modal/Modal.module.scss
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 15;
+  z-index: 21;
 }
 
 .modal__content {
